// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Small /> renders with Strong and Emphasis children 1`] = `
.emotion-2 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-size: 14px;
  line-height: 16px;
}

.emotion-0 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-weight: 700;
  line-height: 16px;
}

.emotion-1 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-style: italic;
  font-weight: 400;
  line-height: 16px;
}

<small
  class="example-class emotion-2"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text 
  <strong
    class="emotion-0"
  >
    with strong
  </strong>
   and
   
  <em
    class="emotion-1"
  >
    emphasis text
  </em>
   included.
</small>
`;

exports[`<Small /> renders with a string 1`] = `
.emotion-0 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-size: 14px;
  line-height: 16px;
}

<small
  class="example-class emotion-0"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text.
</small>
`;
